--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Hello
 <p id="text">
 </p>
 <script>
-const repo = "George";
+const repo = "meow";
 document.getElementById("text").innerHTML= repo;
 
 </script>
